# FlowPilot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/routes/: flows.py  health.py
app/core/: config.py
app/models/: __init__.py  explanation.py  generation.py  health.py  simulation.py  validation.py  workflow.py
app/services/: __init__.py  explanation_service.py  generation_service.py  simulation_service.py  validation_service.py
app/services/providers/: __init__.py  base.py  deepseek_provider.py  mock_provider.py
docs/: agent-log.md  architecture.md  demo-script.md  final-checklist.md  write-up.md
examples/: lead-routing.json
examples/explanations/: lead-routing-explanation.json
examples/generation/: clarification-request.json  clarification-response.json  lead-routing-request.json  lead-routing-response.json  order-status-request.json  order-status-response.json  support-triage-request.json  support-triage-response.json
examples/simulations/: lead-routing-buyer.json  lead-routing-seller.json  lead-routing-unexpected.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: check_deepseek_connection.py  check_llm_config.py
tests/integration/: test_example_workflows.py  test_explain_flow_api.py  test_generate_flow_api.py  test_health.py  test_simulate_flow_api.py  test_validate_flow_api.py
tests/unit/: test_explanation_service.py  test_generation_service.py  test_model_exports.py  test_simulation_service.py  test_validation_service.py
(+10 files in other folders)
